# symbiote

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: agent.rs  checksums.rs  cli.rs  diff.rs  discovery.rs  frontmatter.rs  ir.rs  main.rs  sync.rs
src/agents/: claude.rs  copilot.rs  cursor.rs  gemini.rs  mod.rs  opencode.rs  windsurf.rs
