[package]
name = "symbiote"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
pulldown-cmark = "0.12"
similar = "2"
walkdir = "2"
sha2 = "0.10"
anyhow = "1"
colored = "2"
